# atomic-counter

./: .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  publish.yml
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
