[package]
name = "atomic_counter_py"
version = "0.1.4"
edition = "2021"
publish = false

[lib]
name = "atomic_counter"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
atomic_counter = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
